# rsa-py-gui

./: ..gitignore.un~  .gitignore  .gitignore~  .gitlab-ci.yml  IFLOW.md  README.md  app-window.slint  main.py  pyproject.toml  remember.md  requirements.txt  rsaa.py
.circleci/: config.yml
.gitea/workflows/: build.yaml
CIFailure/: linux.txt
py/: app-window.slint  main.py  pyproject.toml  rsaa.py  test.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  main.rs
rust/src/assembly/: mod.rs  mul_asm.rs  mul_asm_x64.asm
rust/src/rsa/: bigint.rs  decrypt.rs  encrypt.rs  keygen.rs  mod.rs  padding.rs
rust/src/ui/: app.rs  app.slint  mod.rs
rust/src/util/: file_ops.rs  mod.rs
rust/ui/: app-window.slint
