[package]
name = "rsa-gui"
version = "0.1.0"
edition = "2021"
description = "RSA GUI Application with Slint and OpenSSL"
authors = ["RSA GUI"]

[dependencies]
slint = "1.14.1"
openssl = { version = "0.10", features = ["vendored"] }
rsa = "0.7"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
rfd = "0.14"
hex = "0.4"

[build-dependencies]
slint-build = "1.14.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[profile.release]
opt-level = 3
lto = true
